# Machine-Learning-Labs

./: README.md  main.py  pyproject.toml
Lab1/: lab1.ipynb
Lab2/: lab2_part1.ipynb  lab2_part2.ipynb
Lab3/: part1.ipynb  part2.ipynb
Lab4/: part1.ipynb  part2.ipynb
Lab5/: main.ipynb
