[project]
name = "machine-learning-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.8.0",
]
